mongo-exp/templates/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-dep
  namespace: ingress-nginx
spec:
  selector:
    matchLabels:
      app: mongo-dep
  template:
    metadata:
      labels:
        app: mongo-dep
    spec:
      containers:
      - name: mongo
        image: mongo
        volumeMounts: 
          - name: mongopv
            mountPath: /data/whatever
        ports:
        - containerPort: 27017

      volumes: 
      - name: mongopv
        persistentVolumeClaim: 
          claimName: mypvc2
