mongo-exp/templates/mongo-express-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
  namespace: ingress-nginx
spec:
  selector:
    app: mongoexpress
  ports:
  - port: 80
    targetPort: 8081
