mongo-exp/templates/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: ingress-nginx
spec:
  type: ClusterIP
  selector:
    app: mongo-dep
  ports:
  - port: 27017
    targetPort: 27017
