mongo-exp/templates/mongo-express.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongoexpressingress
  labels:
    name: mongoexpressingress
  namespace: ingress-nginx
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
        - http:
            paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: mongo-express-service
                  port: 
                    number: 80
